--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -38,150 +38,83 @@
 
     <Button
         android:id="@+id/exerciseHistory"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
+        android:layout_width="270dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="192dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:text="Exercise Log History"
-        android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/BacktoMainBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.595" />
+        android:text="Exercise History"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/extraNotesHist"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
+        android:layout_width="270dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="192dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
         android:text="Notes History"
-        android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/BacktoMainBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.769" />
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/questionnaireHist"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
+        android:layout_width="270dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="192dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
         android:text="Questionnaire History"
-        android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/BacktoMainBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.941" />
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/bsHistory"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
+        android:layout_width="270dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="192dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
         android:text="Blood Sugar History"
-        android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/BacktoMainBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.038" />
+        android:textAllCaps="false"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/foodHistory"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
+        android:layout_width="270dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="192dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:text="Food Log History"
-        android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/BacktoMainBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.225" />
+        android:text="Food History"
+        android:textAllCaps="false"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/medHistory"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
+        android:layout_width="270dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="192dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:text="Medicine Log History"
-        android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/BacktoMainBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.406" />
+        android:text="Medication History"
+        android:textAllCaps="false"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/graphingBtn"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
+        android:layout_width="270dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="140dp"
         android:background="@drawable/roundbutton"
         android:backgroundTint="@color/colorNeutralWhite"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
         android:text="Graphing"
-        android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/BacktoMainBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        android:textAllCaps="false"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/BacktoMainBtn"
@@ -189,18 +122,14 @@
         android:layout_height="57dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralPaleGray"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:text="Back"
         android:textSize="20sp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
+        android:textColor="@color/colorNeutralWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.954" />
+        android:layout_marginBottom="30dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
