--- a/app/src/main/res/layout/bloodsugar.xml
+++ b/app/src/main/res/layout/bloodsugar.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".BloodSugar">
+    tools:context=".Activities.BloodSugar">
 
     <ImageView
         android:id="@+id/LogoView"
