--- a/app/src/main/res/layout/doctor_details.xml
+++ b/app/src/main/res/layout/doctor_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".DoctorDetails">
+    tools:context=".Activities.DoctorDetails">
 
     <ImageView
         android:id="@+id/LogoView"
