--- a/app/src/main/res/layout/internet_dialog.xml
+++ b/app/src/main/res/layout/internet_dialog.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#005EB8"
-    tools:context=".Welcome">
+    tools:context=".Activities.Welcome">
 
     <ImageView
         android:id="@+id/logoView"
