--- a/app/src/main/res/layout/internet_dialog.xml
+++ b/app/src/main/res/layout/internet_dialog.xml
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:text="There was a problem with your connection"
         android:textColor="#FFFFFF"
+        android:gravity="center"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
