small ui changes

--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -45,6 +45,7 @@
         android:backgroundTint="@color/colorNeutralWhite"
         android:text="Graphing"
         android:textSize="18sp"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@+id/bsHistory"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -60,6 +61,7 @@
         android:backgroundTint="@color/colorNeutralWhite"
         android:text="Blood Sugar History"
         android:textSize="18sp"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@+id/foodHistory"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -75,6 +77,7 @@
         android:backgroundTint="@color/colorNeutralWhite"
         android:text="Food History"
         android:textSize="18sp"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@+id/medHistory"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -90,6 +93,7 @@
         android:backgroundTint="@color/colorNeutralWhite"
         android:text="Medication History"
         android:textSize="18sp"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@+id/exerciseHistory"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -105,6 +109,7 @@
         android:backgroundTint="@color/colorNeutralWhite"
         android:text="Exercise History"
         android:textSize="18sp"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@+id/extraNotesHist"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -120,6 +125,7 @@
         android:backgroundTint="@color/colorNeutralWhite"
         android:text="Notes History"
         android:textSize="18sp"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@+id/questionnaireHist"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -135,6 +141,7 @@
         android:backgroundTint="@color/colorNeutralWhite"
         android:text="Questionnaire History"
         android:textSize="18sp"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@+id/BacktoMainBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
