--- a/app/src/main/res/layout/history_search.xml
+++ b/app/src/main/res/layout/history_search.xml
@@ -106,9 +106,10 @@
         android:layout_height="57dp"
         android:layout_centerHorizontal="true"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralPaleGray"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp"
+        android:textColor="@color/colorNeutralWhite"
         android:text="Back"
         android:textSize="20sp"
         android:topLeftRadius="10dp"
